syntax = "proto3";
package v1;

service CatalogService {
	rpc GetCatalog(Keyword) returns (Products){}
	rpc GetByCategory(Keyword) returns (Products){}
  rpc UpdateCatalog(Products) returns (Response){}
}

enum Vendor {
	BLIBLI = 0;
	BUKALAPAK = 1;
}

message Product {
	Vendor vendor = 1;
	string id = 2;
	string produk = 3;
	string gambar = 4;
  int32 harga = 5;
  string kategori = 6;
	string link = 7;
}

message Products {
	Vendor vendor = 1;
	repeated Product products = 2;
}

message Keyword {
	string Keyword = 1;
}

message Response {
	bool success = 1;
	int32 code = 2;
	string message = 3;
}